# ffmpeg-study

./: CMakeLists.txt  SplitVideo.cpp  SplitVideo.h  Test.cpp  decoder.c  decoder.h  demuxing_decoding.c  filtering_video.c  main.c  marge_image2video.c  marge_image2video.h  mux_demux.c  mux_demux.h  muxing.c  pcm2aac.c  pcm2aac.h  publish_stream.c  publish_stream.h  remuxing.c  remuxing.h  swsscale.c  swsscale.h  transcoding.c  yuv2h264.h  yuv2h64.c  yuv2jpg.c  yuv2jpg.h
